updating homepage for the app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ryan50500.github.io/Takeaway__React",
+  "homepage": "https://ryan50500.github.io/Takeaway__React__TypeScript",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
